[gd_scene load_steps=9 format=2]

[ext_resource path="res://players/weapons/Pike/pike.png" type="Texture" id=1]
[ext_resource path="res://players/weapons/Pike/pike.gd" type="Script" id=2]
[ext_resource path="res://players/weapons/Pike/flash.png" type="Texture" id=3]
[ext_resource path="res://common/assets/sounds/60013__qubodup__whoosh.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="Animation" id=2]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 ), Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.1 ), Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.1 ), Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 ), Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.1 ), Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.1 ), Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 ) ]
}

[sub_resource type="BoxShape" id=4]

[node name="Pike" type="Spatial"]
transform = Transform( 2.0924, 0, 0, 0, 1, 0, 0, 0, 1.41681, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.1 )
texture = ExtResource( 1 )

[node name="AttackArea" type="Area" parent="."]
transform = Transform( 5.5641, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionArea" type="CollisionShape" parent="AttackArea"]
transform = Transform( 0.0184638, 0, 0, 0, 0.1, 0, 0, 0, 0.300657, 0, 0, -0.160296 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/parry = SubResource( 2 )
anims/stab = SubResource( 3 )

[node name="Flash" type="Sprite" parent="."]
position = Vector2( -0.255863, -13.593 )
scale = Vector2( 0.770751, 0.797066 )
z_index = 2
texture = ExtResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0615004 )
enabled = true

[node name="ParryArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.16261, -0.171985, 0, -0.0384137 )
collision_layer = 0
collision_mask = 2147483652

[node name="CollisionArea2" type="CollisionShape" parent="ParryArea"]
transform = Transform( 0.186098, 0, 0, 0, 0.063, 0, 0, 0, 0.533811, 0.173069, 0, -0.32478 )
shape = SubResource( 4 )

[node name="BlockArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.16261, -0.171985, 0, 0.202013 )
collision_layer = 0
collision_mask = 2147483652

[node name="CollisionArea2" type="CollisionShape" parent="BlockArea"]
transform = Transform( 0.17438, 0, 0, 0, 0.063, 0, 0, 0, 0.390558, 0.173069, 0, -0.373736 )
shape = SubResource( 4 )

[node name="AttackAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 0.47792, 0, 0, 0, 1, 0, 0, 0, 0.705811, 0, 0, 0 )
stream = ExtResource( 4 )
attenuation_model = 3
pitch_scale = 2.52
